[package]
name = "port_knocking"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
pnet_packet = "0.35.0"
quanta = "0.12.3"
slotmap = "1.0.7"
socket2 = { version = "0.5.7", features = ["all"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", default-features = false, features = ["rt", "net", "io-util", "time", "macros"] }
