[package]
name = "port_knocking"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TapGhoul <git@tapg.dev>"]
readme = "README.md"
repository = "https://github.com/TapGhoul/port_knocking"
homepage = "https://github.com/TapGhoul/port_knocking"
publish = false

[dependencies]
ahash = "0.8.11"
nix = { version = "0.29.0", features = ["socket"] }
pnet_packet = "0.35.0"
quanta = "0.12.3"
slotmap = "1.0.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", default-features = false, features = ["rt", "net", "io-util", "time", "macros"] }
